Fix Java 17 Compatibility